--- a/TavernMaster.html
+++ b/TavernMaster.html
@@ -91,9 +91,7 @@ by Collin Eddings
 &lt;hr color=#00FF21&gt;
 &gt;&lt;span class=&quot;blink&quot;&gt;|&lt;/span&gt;
 
-&lt;hr color=#00FF21&gt;
-
-test</tw-passagedata><tw-passagedata pid="2" name="lookDwarves" tags="&lt;code&gt;footer&lt;/code&gt;" position="1549,680">&lt;hr color=#00FF21&gt;
+&lt;hr color=#00FF21&gt;</tw-passagedata><tw-passagedata pid="2" name="lookDwarves" tags="&lt;code&gt;footer&lt;/code&gt;" position="1549,680">&lt;hr color=#00FF21&gt;
 (live: 2s)[(transition: &quot;dissolve&quot;)[ [[One of the dwarves throws a mug full of ale across the tavern, shouting, &quot;Well, Haggin, I&#x27;ll show &lt;i&gt;you&lt;/i&gt; who got a small beard!&quot; You get the impression that you should leave them alone.-&gt;lookBarkeep]]
 
 -
