--- a/TavernMaster.html
+++ b/TavernMaster.html
@@ -508,7 +508,7 @@ You rolled a $rolled.
 |typed-delay0&gt;[&gt;n]
 &lt;hr color=#00FF21&gt;
 
-&lt;script&gt;startTypedModule();&lt;/script&gt;</tw-passagedata><tw-passagedata pid="37" name="singOff" tags="" position="684,946">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="38" name="armWrestle2" tags="" position="722,710">&lt;hr color=#00FF21&gt;
+&lt;script&gt;startTypedModule();&lt;/script&gt;</tw-passagedata><tw-passagedata pid="37" name="singOff" tags="" position="684,946">Double-click this passage to edit it.g</tw-passagedata><tw-passagedata pid="38" name="armWrestle2" tags="" position="722,710">&lt;hr color=#00FF21&gt;
 (live: 2s)[(transition: &quot;dissolve&quot;)[(link-reveal: &quot;&amp;quot;Are you sure you want to &lt;i&gt;forfeit&lt;/i&gt;? On top of a chance at winning the pile of gold on the table, this arm wrestlin&#x27; match might be, ye know, important for some sort of overarching plot.&amp;quot;&quot;)[
 
 [[Arm wrestle Haggin? Y/N-&gt;armWrestle3]] ] ](stop:)]
