--- a/TavernMaster.html
+++ b/TavernMaster.html
@@ -263,7 +263,7 @@ Torch (unlit)-&gt;eatChickenLeg]] ] ](stop:)]
 
 -
 
-[[The unphased barkeep continues polishing his mug but you now have his full attention. &quot;Say, as much as I hated those stupid dwarves,&quot; says the barkeep, &quot;if you want to make yourself useful you could clear out all those rats from the basement with that legendary sword you got. &lt;i&gt;I&#x27;ll make sure it&#x27;s worth your while.&quot;&lt;/i&gt;-&gt;goBasement]] ]](stop:)]
+[[The unphased barkeep continues polishing his mug. &quot;Say, as much as I hated those stupid dwarves,&quot; says the barkeep, &quot;if you want to make yourself useful, you could clear out all those rats in the basement with that legendary sword you got. &lt;i&gt;I&#x27;ll make sure it&#x27;s worth your while.&quot;&lt;/i&gt;-&gt;goBasement]] ]](stop:)]
 
 &lt;hr color=#00FF21&gt;
 |typed-delay0&gt;[&gt;talk barkeep]
