--- a/LEAPProject.html
+++ b/LEAPProject.html
@@ -15,7 +15,7 @@
 
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
 
-</script><tw-passagedata pid="1" name="Start" tags="" position="412,188">(set: $score to 0)You are a Human Resources employee at a large corporation NatureShare.
+</script><tw-passagedata pid="1" name="Start" tags="" position="412,188">(set: $score to 0)You are a Human Resources employee at a large corporation called NatureShare.
 
 Your job includes hiring new employees, evaluating current employees, and resolving any conflicts between employees within the company.
 
@@ -99,7 +99,7 @@ Will you do anything further?
 
 (link: &quot;Consider the matter resolved.&quot;)[(set: $score to $score + 2)(goto: &quot;moreWomen&quot;)]
 
-(link: &quot;Maintain surveillance on the offenders.&quot;)[(set: $score to $score + 1)(goto: &quot;moreWomen&quot;)]</tw-passagedata><tw-passagedata pid="13" name="moreWomen" tags="" position="454,1207">The public is complaining that yoru company is male dominated and looks down on women. As a result, you have been tasked with ensuring at least 30% of the employees are female. However, only 20% of your applicants are female and only 14% of them qualify.
+(link: &quot;Maintain surveillance on the offenders.&quot;)[(set: $score to $score + 1)(goto: &quot;moreWomen&quot;)]</tw-passagedata><tw-passagedata pid="13" name="moreWomen" tags="" position="454,1207">The public is complaining that your company is male dominated and looks down on women. As a result, you have been tasked with ensuring at least 30% of the employees are female. However, only 20% of your applicants are female and only 14% of them qualify.
 
 What will you do?
 
@@ -129,7 +129,9 @@ What will you do?
 
 [[Continue-&gt;endGame]]</tw-passagedata><tw-passagedata pid="18" name="endGame" tags="" position="456,1622">Your score: $score
 
-Thanks for playing!</tw-passagedata></tw-storydata>
+Thanks for playing!
+
+[[Play again?-&gt;Start]]</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,o=!1,i=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){o=!0,i=e}finally{try{!r&&s.return&&s.return()}finally{if(o)throw i}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
